--- a/plugin-name/admin/css/exopite-meta-box-style.css
+++ b/plugin-name/admin/css/exopite-meta-box-style.css
@@ -192,6 +192,7 @@
     position: relative;
     padding: .75rem 1.25rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
     border: 1px solid transparent;
 }
 .exopite-meta-boxes-wrapper .alert-primary {
